<resources>
    <string name="app_name">chat</string>
    <string name="default_web_client_id">597177009275-hj8c3dp4anqe0fvq82nl0h5bgdgb1qlp.apps.googleusercontent.com</string>

    <string name="item_profile">Perfil</string>
    <string name="item_users">Usuarios</string>
    <string name="item_chats">Chats</string>

    <string name="tv_Title">Titulo</string>

    <string name="optionEmail">Continuar con Email</string>
    <string name="optionGoogle">Continuar con Google</string>
    <string name="optionNumber">Continuar con Numero de Telefono</string>

    <string name="txt_login">Login</string>
    <string name="et_email">Correo Electronico</string>
    <string name="et_password">Contraseña</string>
    <string name="btn_enter">Ingresar</string>
    <string name="txt_dont_account">No tienes una cuenta?</string>
    <string name="tv_register">Registrarme</string>
    <string name="tv_recovery_account">Recuperar Contraseña</string>

    <string name="txt_register">Registro</string>
    <string name="et_name">Nombres</string>
    <string name="et_R_password">Repita la contraseña</string>
    <string name="btn_register">Registrar</string>

    <string name="btn_updateInfo">Actualizar</string>
    <string name="btn_changePass">Cambiar Contraseña</string>
    <string name="btn_logout">Cerrar Sesion</string>

    <string name="txt_names">Nombres: </string>
    <string name="tv_names">--</string>
    <string name="txt_email">Email: </string>
    <string name="tv_email">--</string>
    <string name="txt_prov">Proveedor: </string>
    <string name="tv_prov">--</string>
    <string name="txt_time_reg">Miembro desde: </string>
    <string name="tv_time_reg">--</string>


    <string name="txt_title_edit">Editar informacion</string>
    <string name="btn_update">Actualizar</string>
    <string name="btn_premium">Suscribirse a Premium</string>

    <string name="txt_recovery_pass">Recuperar Contraseña</string>
    <string name="txt_insert_email">Ingrese su email para el envio de las instrucciones de recuperacion</string>
    <string name="btn_submit">Enviar</string>

    <string name="txt_change_pass">Cambiar Contraseña</string>

    <string name="et_actual_pass">Contraseña actual</string>
    <string name="et_new_pass">Contraseña nueva</string>
    <string name="et_r_new_pass">Repetir contraseña nueva</string>
    <string name="btn_ChangePass">Cambiar</string>

    <string name="item_uid">UID del usuario</string>
    <string name="item_username">Username del usuario</string>
    <string name="item_email">Email del usuario</string>


    <string name="et_search_user">Buscar usuario</string>
    
    <string name="txt_user_name">Nombres</string>
    <string name="et_msg_chat">Escriba su mensaje</string>
    <string name="tv_time_msg">dd/MM/yyyy hh:mmm</string>

    <string name="tv_date">dd/MM/yyyy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_close_visualizer">Cerrar</string>
    <string name="txt_status">Online</string>
    <string name="retry">Retry</string>
</resources>