<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ProfileFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_profile"
            android:layout_marginTop="20dp"
            android:scaleType="centerCrop"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_img_profile"
            android:layout_width="120dp"
            android:layout_height="120dp"/>

        <TextView
            android:id="@+id/txt_names"
            android:text="@string/txt_names"
            android:layout_below="@+id/iv_profile"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_names"
            android:text="@string/tv_names"
            android:layout_below="@+id/iv_profile"
            android:layout_marginTop="20dp"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txt_email"
            android:text="@string/txt_email"
            android:layout_below="@+id/txt_names"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_email"
            android:text="@string/tv_email"
            android:layout_below="@+id/txt_names"
            android:layout_marginTop="20dp"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txt_prov"
            android:text="@string/txt_prov"
            android:layout_below="@+id/txt_email"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_prov"
            android:text="@string/tv_prov"
            android:layout_below="@+id/txt_email"
            android:layout_marginTop="20dp"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txt_time_reg"
            android:text="@string/txt_time_reg"
            android:layout_below="@+id/txt_prov"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_time_reg"
            android:text="@string/tv_time_reg"
            android:layout_below="@+id/txt_prov"
            android:layout_marginTop="20dp"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_updateInfo"
            android:layout_below="@+id/tv_time_reg"
            android:layout_centerInParent="true"
            android:layout_marginTop="25dp"
            android:textAllCaps="true"
            android:text="@string/btn_updateInfo"
            app:cornerRadius="8dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"/>
        
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_logout"
            android:text="@string/btn_logout"
            android:textAllCaps="true"
            android:layout_gravity="center"
            android:layout_below="@+id/btn_updateInfo"
            android:layout_marginTop="8dp"
            android:layout_centerInParent="true"
            app:cornerRadius="10dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

</ScrollView>