<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePassword">
    
    <RelativeLayout
        android:id="@+id/toolbarRL"
        android:layout_width="match_parent"
        android:layout_height="55dp">

        <ImageButton
            android:id="@+id/IbBack"
            android:background="@android:color/transparent"
            android:padding="10dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txt_change_pass"
            android:layout_centerInParent="true"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_change_pass"
            />
        
        <View
            android:layout_alignParentBottom="true"
            android:background="#cccccc"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
        
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:layout_below="@+id/toolbarRL">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TILActualPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/et_actual_pass"
                android:hint="@string/et_actual_pass"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TILNewPassword"
            android:layout_below="@+id/TILActualPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/et_new_pass"
                android:hint="@string/et_new_pass"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TILRepeatNewPassword"
            android:layout_below="@id/TILNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/et_r_new_pass"
                android:hint="@string/et_r_new_pass"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_changePass"
            android:text="@string/btn_changePass"
            android:textAllCaps="true"
            android:layout_alignParentBottom="true"
            app:cornerRadius="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </RelativeLayout>


</RelativeLayout>