<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="RecoverPassword">
    
    <RelativeLayout
        android:id="@+id/toolbarRL"
        android:layout_width="match_parent"
        android:layout_height="55dp">

        <ImageButton
            android:id="@+id/IBBack"
            android:padding="10dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_back"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        
        <TextView
            android:id= "@+id/txt_recovery_pass"
            android:text = "@string/txt_recovery_pass"
            android:textStyle = "bold"
            android:textAllCaps= "true"
            android:textSize = "16sp"
            android:layout_centerInParent = "true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        
        <View
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_height="1dp"
            android:background="#cccccc"/>
        
    </RelativeLayout>

    <RelativeLayout
        android:layout_below="@+id/toolbarRL"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iconPass"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/icon_password"
            android:layout_centerHorizontal="true"/>
        
        <TextView
            android:id="@+id/txt_insert_email"
            android:text="@string/txt_insert_email"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_below="@+id/iconPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TILEmail"
            android:layout_marginTop="10dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            android:layout_below="@+id/txt_insert_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_email"
                android:hint="@string/et_email"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_submit"
            android:text="@string/btn_submit"
            app:cornerRadius="8dp"
            android:layout_alignParentBottom="true"
            android:textAllCaps="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </RelativeLayout>
</RelativeLayout>