<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditInformation">

    <!-- Barra de progreso (ProgressBar) -->
    <RelativeLayout
        android:id="@+id/progressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:gravity="center">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/toolbarRL"
        android:layout_width="match_parent"
        android:layout_height="55dp">

        <ImageButton
            android:id="@+id/IbBack"
            android:src="@drawable/ic_back"
            android:background="@android:color/transparent"
            android:padding="10dp"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <TextView
            android:text="@string/txt_title_edit"
            android:layout_centerInParent="true"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <View
            android:background="#cccccc"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/profileRL"
                android:layout_centerHorizontal="true"
                android:layout_width="120dp"
                android:layout_height="120dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/ivProfile"
                    android:src="@drawable/ic_img_profile"
                    android:scaleType="centerCrop"
                    android:layout_width="120dp"
                    android:layout_height="120dp"/>

                <ImageView
                    android:id="@+id/ivEditImage"
                    android:src="@drawable/icon_edit"
                    android:layout_alignParentEnd="true"
                    android:layout_width="50dp"
                    android:layout_height="50dp"/>

            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TILnames"
        android:padding="5dp"
        android:layout_marginTop="10dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <EditText
            android:id="@+id/et_name"
            android:hint="@string/et_name"
            android:inputType="textPersonName|textCapWords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_update"
        android:layout_marginTop="10dp"
        app:cornerRadius="8dp"
        android:text="@string/btn_update"
        android:textAllCaps="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_premium"
        android:layout_marginTop="10dp"
        app:cornerRadius="8dp"
        android:text="@string/btn_premium"
        android:textAllCaps="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</androidx.appcompat.widget.LinearLayoutCompat>
