<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".chat.ChatActivity">

    <RelativeLayout
        android:id="@+id/toolbarRL"
        android:layout_width="match_parent"
        android:layout_height="55dp">

        <ImageButton
            android:id="@+id/IbBack"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/toolbarIV"
            android:layout_marginEnd="10dp"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/txt_user_name"
            android:src="@drawable/user_profile"
            android:layout_width="40dp"
            android:layout_height="40dp" />

        <TextView
            android:id="@+id/txt_user_name"
            android:text="@string/txt_user_name"
            android:layout_centerInParent="true"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txt_status"
            android:layout_below="@+id/txt_user_name"
            android:text="@string/txt_status"
            android:layout_centerInParent="true"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            android:background="#ccc"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="1dp" />
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chatsRV"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_below="@+id/toolbarRL"
        android:layout_above="@id/View2"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RelativeLayout
        android:id="@+id/RLmessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp">

        <EditText
            android:id="@+id/et_msg_chat"
            android:hint="@string/et_msg_chat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/adjFAB"
            android:layout_marginEnd="5dp"
            android:padding="10dp"
            android:inputType="textMultiLine|textCapSentences" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/adjFAB"
            android:layout_centerVertical="true"
            app:fabSize="mini"
            android:layout_toStartOf="@+id/sendFAB"
            android:layout_marginEnd="10dp"
            android:elevation="0dp"
            android:src="@drawable/ic_img_chat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:backgroundTint="#CCCCCC" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/sendFAB"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_send_chat"
            android:elevation="0dp"
            app:fabSize="mini"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:backgroundTint="#CCCCCC" />
    </RelativeLayout>

    <View
        android:id="@+id/View2"
        android:background="#ccc"
        android:layout_above="@+id/RLmessage"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <!-- ProgressBar añadido -->
    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />
</RelativeLayout>
